syntax = "proto3";
// system_operate_log 操作日志
package logger;
option go_package = "cloud/service/system/logger;logger";
import "google/protobuf/timestamp.proto";
import "pagination.proto";

// SystemOperateLogObject 数据对象
message SystemOperateLogObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //主键
	// @inject_tag: db:"username" json:"username"
	optional string username = 2; //用户账号
	// @inject_tag: db:"module" json:"module"
	optional string module = 3; //模块名称
	// @inject_tag: db:"request_method" json:"requestMethod"
	optional string request_method = 4; //请求方法名
	// @inject_tag: db:"request_url" json:"requestUrl"
	optional string request_url = 5; //请求地址
	// @inject_tag: db:"user_ip" json:"userIp"
	optional string user_ip = 6; //用户 ip
	// @inject_tag: db:"user_agent" json:"userAgent"
	optional string user_agent = 7; //UA
	// @inject_tag: db:"go_method" json:"goMethod"
	optional string go_method = 8; //方法名
	// @inject_tag: db:"go_method_args" json:"goMethodArgs"
	optional bytes go_method_args = 9; //方法的参数
	// @inject_tag: db:"start_time" json:"startTime"
	google.protobuf.Timestamp start_time = 10; //操作开始时间
	// @inject_tag: db:"duration" json:"duration"
	optional int32 duration = 11; //执行时长
	// @inject_tag: db:"channel" json:"channel"
	optional string channel = 12; //渠道
	// @inject_tag: db:"result" json:"result"
	optional int32 result = 13; //结果(0 成功/1 失败)
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 14; //用户 ID
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 15; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 16; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 17; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 18; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 19; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 20; //更新时间
}
// SystemOperateLogTotalResponse 列表数据总量
message SystemOperateLogTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemOperateLogCreateRequest 创建数据请求
message SystemOperateLogCreateRequest {
	SystemOperateLogObject data = 1;
}
// SystemOperateLogCreateResponse 创建数据响应
message SystemOperateLogCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemOperateLogUpdateRequest 更新数据请求
message SystemOperateLogUpdateRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //主键
	SystemOperateLogObject data = 2;
}
// SystemOperateLogUpdateResponse 更新数据响应
message SystemOperateLogUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemOperateLogDeleteRequest 删除数据请求
message SystemOperateLogDeleteRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //主键
}
// SystemOperateLogDeleteResponse 删除数据响应
message SystemOperateLogDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemOperateLogRequest 查询单条数据请求
message SystemOperateLogRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //主键
}
// SystemOperateLogResponse 查询单条数据响应
message SystemOperateLogResponse {
	int64 code = 1;
	string msg = 2;
	SystemOperateLogObject data = 3;
}
// SystemOperateLogRecoverRequest 恢复数据请求
message SystemOperateLogRecoverRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //主键
}
// SystemOperateLogRecoverResponse 删除数据响应
message SystemOperateLogRecoverResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemOperateLogDropRequest 清理数据请求
message SystemOperateLogDropRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //主键
}
// SystemOperateLogDropResponse 清理数据响应
message SystemOperateLogDropResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemOperateLogListRequest 列表数据
message SystemOperateLogListRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"username" json:"username"
	optional string username = 3; // 用户账号
	// @inject_tag: db:"module" json:"module"
	optional string module = 4; // 模块名称
	// @inject_tag: db:"begin_start_time" json:"beginStartTime"
	google.protobuf.Timestamp begin_start_time = 5; // 操作开始时间
	// @inject_tag: db:"finish_start_time" json:"finishStartTime"
	google.protobuf.Timestamp finish_start_time = 6; // 操作开始时间
	// @inject_tag: db:"result" json:"result"
	optional int32 result = 7; // 结果(0 成功/1 失败)
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 8; // 用户 ID
	// @inject_tag: db:"data_scope_dept" json:"dataScopeDept"
	optional bytes data_scope_dept = 9; //数据范围(指定部门数组)
	// @inject_tag: db:"dept_id" json:"deptId"
	optional int64 dept_id = 10; // 租户ID
	// @inject_tag: db:"data_scope" json:"dataScope"
	optional int32 data_scope = 11; //数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）
	// @inject_tag: db:"pagination" json:"pagination"
	optional pagination.PaginationRequest pagination = 12; // 分页
}

// SystemOperateLogListResponse 数据响应
message SystemOperateLogListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemOperateLogObject data = 3;
}
// SystemOperateLogListTotalRequest 列表数据
message SystemOperateLogListTotalRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"username" json:"username"
	optional string username = 3; // 用户账号
	// @inject_tag: db:"module" json:"module"
	optional string module = 4; // 模块名称
	// @inject_tag: db:"begin_start_time" json:"beginStartTime"
	google.protobuf.Timestamp begin_start_time = 5; // 操作开始时间
	// @inject_tag: db:"finish_start_time" json:"finishStartTime"
	google.protobuf.Timestamp finish_start_time = 6; // 操作开始时间
	// @inject_tag: db:"result" json:"result"
	optional int32 result = 7; // 结果(0 成功/1 失败)
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 8; // 用户 ID
	// @inject_tag: db:"data_scope_dept" json:"dataScopeDept"
	optional bytes data_scope_dept = 9; //数据范围(指定部门数组)
	// @inject_tag: db:"dept_id" json:"deptId"
	optional int64 dept_id = 10; // 租户ID
	// @inject_tag: db:"data_scope" json:"dataScope"
	optional int32 data_scope = 11; //数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）

}



// SystemOperateLogMultipleRequest 多选数据请求
message SystemOperateLogMultipleRequest {
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"ids" json:"ids"
	optional bytes ids = 2; // 主键
}

// SystemOperateLogMultipleResponse 多选数据响应
message SystemOperateLogMultipleResponse {
	int64 code = 1;
	string msg = 2;
}



// SystemOperateLogService 服务
service SystemOperateLogService{
	rpc SystemOperateLogCreate(SystemOperateLogCreateRequest) returns (SystemOperateLogCreateResponse);
	rpc SystemOperateLogUpdate(SystemOperateLogUpdateRequest) returns (SystemOperateLogUpdateResponse);
	rpc SystemOperateLogDelete(SystemOperateLogDeleteRequest) returns (SystemOperateLogDeleteResponse);
	rpc SystemOperateLog(SystemOperateLogRequest) returns (SystemOperateLogResponse);
	rpc SystemOperateLogRecover(SystemOperateLogRecoverRequest) returns (SystemOperateLogRecoverResponse);
	rpc SystemOperateLogDrop(SystemOperateLogDropRequest) returns (SystemOperateLogDropResponse);
	rpc SystemOperateLogList(SystemOperateLogListRequest) returns (SystemOperateLogListResponse);
	rpc SystemOperateLogListTotal(SystemOperateLogListTotalRequest) returns (SystemOperateLogTotalResponse);
	rpc SystemOperateLogMultipleDelete(SystemOperateLogMultipleRequest) returns (SystemOperateLogMultipleResponse);
	rpc SystemOperateLogMultipleRecover(SystemOperateLogMultipleRequest) returns (SystemOperateLogMultipleResponse);
	rpc SystemOperateLogMultipleDrop(SystemOperateLogMultipleRequest) returns (SystemOperateLogMultipleResponse);
}